# cord-summary

./: .env.example  .gitignore  CLAUDE.md  Procfile  allowlist.txt  blocklist.txt  nixpacks.toml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation-and-pipeline/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-on-demand-summarization/: 02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md
.planning/phases/03-scheduling-and-delivery/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-summary-quality-improvements/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-UAT.md
.planning/phases/05-summary-language-controls/: 05-CONTEXT.md  05-UAT.md
.planning/phases/06-error-alerting/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-UAT.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/bot/: __init__.py  __main__.py  alerting.py  client.py  config.py  language_filter.py  models.py  summarizer.py
tests/: test_chunker.py  test_config_phase2.py  test_embeds.py  test_language_filter.py  test_preprocessor.py  test_recruiting_store.py  test_summarizer.py
(+50 files in other folders)
